<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autônomia</string>
    <string name="kms_por_litro">Kms por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="informe_valores_validos">Informe valores válidos</string>
</resources>
